# genetix

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
genetix/: typing.py
genetix/_src/: _fitness.py  _genes.py  _monitor.py  _save.py  _utils.py
genetix/_src/_ops/: _solution.py
