[dependency-groups]
dev = [
  "pre-commit>=4.3.0",
  "pytest>=8.4.2",
  "pytest-cov>=7.0.0",
  "ruff>=0.13.1"
]

[project]
dependencies = [
  "equinox>=0.13.1",
  "jax>=0.7.2",
  "jaxtyping>=0.3.2"
]
description = "Genetic Algorithm in JAX"
name = "genetix"
readme = "README.md"
requires-python = ">=3.11"
urls = {repository = "https://github.com/LennartGevers/genetix"}
version = "0.1.0"

[tool.pyright]
include = ["diffrax", "tests"]
reportIncompatibleMethodOverride = true
reportIncompatibleVariableOverride = false # Incompatible with eqx.AbstractVar
reportUnnecessaryTypeIgnoreComment = true

[tool.ruff]
extend-include = ["*.ipynb"]
src = []

[tool.ruff.lint]
fixable = ["I001", "F401", "UP"]
ignore = ["E402", "E721", "E731", "E741", "F722", "UP038"]
ignore-init-module-imports = true
select = ["E", "F", "I001", "UP"]

[tool.setuptools]
packages = ["genetix"]

[tool.uv]
package = true
